Sugati/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>O_Holiday_Reason__c</fullName>
        <label>Holiday Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couple (not on honeymoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Holiday (incl children 18 and over)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Holiday (incl children 18 and under)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sabbatical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stag/Hen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Holiday_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Include_Flight_Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Flight Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Infant_Old__c</fullName>
        <label>Infant Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Infant__c</fullName>
        <label>Infant</label>
        <summaryFilterItems>
            <field>Group_Member__c.GM_Occupancy_Type__c</field>
            <operation>equals</operation>
            <value>Infant</value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Member__c.GM_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Insurance_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Is_Group_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group Booking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Itinerary_At_Glance_Rows__c</fullName>
        <label>Itinerary At Glance Rows</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Itinerary_Cover_Name__c</fullName>
        <label>Itinerary Cover Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Itinerary_Display_Price__c</fullName>
        <inlineHelpText>Use this if you want to hide the Holiday Final Cost.</inlineHelpText>
        <label>Itinerary Display Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Last_Payment__c</fullName>
        <label>Last Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Lead_Email_Address__c</fullName>
        <description>This is to be used with workflow only.</description>
        <label>Lead Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>O_Lead_In__c</fullName>
        <formula>O_Departure_Date__c -  CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Live_Margin__c</fullName>
        <formula>if( O_Include_Flight_Margin__c ,(O_Margin_Value_With_Commission__c/ Amount),(O_Margin_Value_With_Commission__c/ (Amount- O_Total_Flight_Cost__c)))</formula>
        <label>Booking Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Map_Type__c</fullName>
        <label>Map Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Margin_Value_With_Commission__c</fullName>
        <formula>O_Margin__c -(O_Agent_Commission__c+if(ISBLANK(TEXT(O_Sales_Commission_Type__c)),0,O_Finders_Commission__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Value With Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Margin_Warning__c</fullName>
        <formula>(O_Live_Margin__c*100) &lt; O_Suggested_Margin__r.M_Margin__c</formula>
        <label>Margin Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Margin__c</fullName>
        <label>Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Maximum_Occupancy__c</fullName>
        <label>Maximum Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Minimum_Occupancy__c</fullName>
        <label>Minimum Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_No_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_No_of_Nights__c</fullName>
        <formula>O_Return_Date__c -  O_Departure_Date__c</formula>
        <label>No of Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Old_Markup_Value__c</fullName>
        <label>Old Markup Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Original_COSTS__c</fullName>
        <description>A combination of COSTS and Charges fields</description>
        <inlineHelpText>A combination of COSTS and Charges fields</inlineHelpText>
        <label>Original COSTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Original_Margin__c</fullName>
        <formula>( O_Original_Sales_Price__c -  O_Original_COSTS__c ) / O_Original_Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Original_Sales_Price__c</fullName>
        <label>Original Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Other_Invoice_Comments__c</fullName>
        <label>Other Invoice Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Outstanding__c</fullName>
        <formula>Amount - O_Total_Payment_Without_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Owner_Name__c</fullName>
        <label>Owner_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Parent_Source__c</fullName>
        <formula>Campaign.Parent.Name</formula>
        <label>Parent Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Pax__c</fullName>
        <formula>IF(O_Is_Group_Booking__c,IF(Adult_Old__c &gt; 0, Adult_Old__c, O_Adult__c) + IF( O_Child_Old__c  &gt; 0, O_Child_Old__c, O_Children__c) + IF(  O_Infant_Old__c   &gt; 0, O_Infant_Old__c, O_Infant__c)-3,IF(Adult_Old__c &gt; 0, Adult_Old__c, O_Adult__c) + IF( O_Child_Old__c  &gt; 0, O_Child_Old__c, O_Children__c) + IF(  O_Infant_Old__c   &gt; 0, O_Infant_Old__c, O_Infant__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Payment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Pipeline_Notes__c</fullName>
        <label>Pipeline Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Policy_No__c</fullName>
        <label>Policy No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Pre_Booking__c</fullName>
        <formula>IF( YEAR(  O_Departure_Date__c  ) &gt; YEAR( O_Booking_Date__c ), &quot;YES&quot;, &quot;NO&quot;)</formula>
        <label>Pre-Booking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Pre_Quote__c</fullName>
        <formula>IF( YEAR( O_Departure_Date__c ) &gt; YEAR( O_Quote_Date__c ), &quot;YES&quot;, &quot;NO&quot;)</formula>
        <label>Pre Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Previous_Margin_Value__c</fullName>
        <label>Previous Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Previous_Total_Selling_Price__c</fullName>
        <label>Previous Total Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Questionnaire_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Questionnaire Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Quotation_Default_Text__c</fullName>
        <label>Quotation Default Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Quotation_Type__c</fullName>
        <label>Quotation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Client Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Quote_Month__c</fullName>
        <formula>IF(MONTH(O_Quote_Date__c) = 1, &quot;January&quot;, 
IF(MONTH(O_Quote_Date__c) = 2, &quot;February&quot;, 
IF(MONTH(O_Quote_Date__c) = 3, &quot;March&quot;, 
IF(MONTH(O_Quote_Date__c) = 4, &quot;April&quot;, 
IF(MONTH(O_Quote_Date__c) = 5, &quot;May&quot;, 
IF(MONTH(O_Quote_Date__c) = 6, &quot;June&quot;, 
IF(MONTH(O_Quote_Date__c) = 7, &quot;July&quot;, 
IF(MONTH(O_Quote_Date__c) = 8, &quot;August&quot;, 
IF(MONTH(O_Quote_Date__c) = 9, &quot;September&quot;, 
IF(MONTH(O_Quote_Date__c) = 10, &quot;October&quot;, 
IF(MONTH(O_Quote_Date__c) = 11, &quot;November&quot;,IF(MONTH(O_Quote_Date__c) = 12, 
&quot;December&quot;,&quot;&quot;))))))))))))</formula>
        <label>Quote Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Quote_No__c</fullName>
        <externalId>true</externalId>
        <label>Dhruv Quote No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Quote_Week_Actual__c</fullName>
        <formula>CEILING(((O_Quote_Date__c - DATE(YEAR(O_Quote_Date__c ), 1, 1) + 1) +
MOD(DATE(YEAR(O_Quote_Date__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Week Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Quote_Week__c</fullName>
        <label>Quote Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Quote_Year__c</fullName>
        <formula>YEAR( O_Quote_Date__c )</formula>
        <label>Quote Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Quote_to_Booking__c</fullName>
        <formula>O_Booking_Date__c -  O_Quote_Date__c</formula>
        <label>Quote to Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Quote_to_Departure__c</fullName>
        <formula>O_Departure_Date__c -  O_Quote_Date__c</formula>
        <label>Quote to Departure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Reason__c</fullName>
        <description>Reason for not-booking where enquiry or quote has gone cold OR
Reason for booking cancellation where relevant.</description>
        <inlineHelpText>Reason for not-booking where enquiry or quote has gone cold OR
Reason for booking cancellation where relevant.</inlineHelpText>
        <label>Reason for Colding</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>No response from the client after initial contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response from the client after having been responsive initially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client not travelling at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client not travelling as too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client booked direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client booked through a competitor based on price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client booked through a competitor based on knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client booked through a competitor based on turnaround speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client booked through a competitor based on product preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry politely declined by consultant due to unrealistic budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_RecordType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Record_Type__c.RT_SObject_Type__c</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Record_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Reminder Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Return_Month__c</fullName>
        <formula>IF(MONTH(O_Return_Date__c) = 1, &quot;January&quot;, 
IF(MONTH(O_Return_Date__c) = 2, &quot;February&quot;, 
IF(MONTH(O_Return_Date__c) = 3, &quot;March&quot;, 
IF(MONTH(O_Return_Date__c) = 4, &quot;April&quot;, 
IF(MONTH(O_Return_Date__c) = 5, &quot;May&quot;, 
IF(MONTH(O_Return_Date__c) = 6, &quot;June&quot;, 
IF(MONTH(O_Return_Date__c) = 7, &quot;July&quot;, 
IF(MONTH(O_Return_Date__c) = 8, &quot;August&quot;, 
IF(MONTH(O_Return_Date__c) = 9, &quot;September&quot;, 
IF(MONTH(O_Return_Date__c) = 10, &quot;October&quot;, 
IF(MONTH(O_Return_Date__c) = 11, &quot;November&quot;, 
&quot;December&quot;)))))))))))</formula>
        <label>Return Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Return_Year__c</fullName>
        <formula>YEAR(O_Return_Date__c )</formula>
        <label>Return Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Sales_CommissionP__c</fullName>
        <label>Sales Commission %</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Sales_Commission_Type__c</fullName>
        <label>Sales Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    
    <fields>
        <fullName>O_School_holidays__c</fullName>
        <label>School holidays</label>
        <picklist>
            <picklistValues>
                <fullName>School Easter holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Summer holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Christmas holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb Half term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May Half term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct Half term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Seasons__c</fullName>
        <label>Seasons</label>
        <picklist>
            <picklistValues>
                <fullName>Christmas/New Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter (non Christmas/Easter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autumn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Selling_Exchange_Rate__c</fullName>
        <formula>IF(TEXT( O_Booking_Currency__c ) = &quot;GBP&quot;, 1, O_Exchange_Rate__r.ER_Exchange_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Booking Currency to GBP Exchange Rate</inlineHelpText>
        <label>Selling Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Selling_Price_in_GBP__c</fullName>
        <formula>IF(  TEXT(O_Booking_Currency__c)= &quot;GBP&quot; ,  Amount , Amount*O_Selling_Exchange_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Price in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Service_From_Date__c</fullName>
        <label>Service From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Show_Option_text_for_quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Option text for quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Suggested_Margin_Value__c</fullName>
        <formula>O_Suggested_Margin__r.M_Margin__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Suggested_Margin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Margin</label>
        <referenceTo>Margin__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Supplier_Payments__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SupplierPayments?id=&quot;&amp;Id, &quot;Supplier Payments&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Payments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_TOMS_Applicable_Margin__c</fullName>
        <label>TOMS Applicable Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_TOMS_Charges__c</fullName>
        <label>TOMS Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_TOMS_Post_Margin__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOMS Post Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_TOTAL_COS_in_GBP__c</fullName>
        <inlineHelpText>Supplier Costs + Ancillary Charges (eg. - CC Fee, TOMS, APC etc...)</inlineHelpText>
        <label>Total Hotel Cost in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Taken_by__c</fullName>
        <description>Original field from OT previous database. Will be changed to Account Owner eventually.</description>
        <label>Taken by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Target_Mark_Up_Value__c</fullName>
        <label>Target Mark Up Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Target_Mark_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Mark-Up</label>
        <referenceTo>Target_Mark_Up__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Tasks_Management__c</fullName>
        <label>Tasks Management</label>
        <picklist>
            <picklistValues>
                <fullName>Booking form completed by client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier reservations confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flight tickets issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final documents sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final call to client made pre departure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome back call made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome back survey completed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>O_Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Diving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Total_Credit_Card_Charges__c</fullName>
        <label>Total Credit Card Charges</label>
        <summarizedField>Client_Payment__c.CP_Credit_Card_Charges_Amount__c</summarizedField>
        <summaryForeignKey>Client_Payment__c.CP_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Total_FFP_Charges__c</fullName>
        <label>Total FFP Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Total_Flight_Cost__c</fullName>
        <label>Total Flight Cost</label>
        <summarizedField>Client_Group__c.CG_Total_Flight_Cost__c</summarizedField>
        <summaryForeignKey>Client_Group__c.CG_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Total_Flight_Cost_in_GBP__c</fullName>
        <label>Total Flight Cost in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Total_Other_Charges__c</fullName>
        <formula>O_Charity__c +  O_Arrival_Presents__c +  O_FX_Transaction_Charges__c +  O_Total_FFP_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Total_Payment1__c</fullName>
        <formula>O_Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment with CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Total_Payment_Without_CC__c</fullName>
        <label>Total Payment Without CC</label>
        <summarizedField>Client_Payment__c.CP_Receipt_AmountEx__c</summarizedField>
        <summaryFilterItems>
            <field>Client_Payment__c.CP_Processed_On__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Payment__c.CP_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Total_Payment__c</fullName>
        <label>Total Payment Received</label>
        <summarizedField>Client_Payment__c.CP_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Client_Payment__c.CP_Processed_On__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Payment__c.CP_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Total_Recommended_Selling_Price__c</fullName>
        <label>Total Recommended Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Total_Regulatory_Cost__c</fullName>
        <formula>BLANKVALUE(O_APC_Charges__c, O_FFP_Charges__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Regulatory Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>O_Total_Selling_Price__c</fullName>
        <label>Total Selling Price</label>
        <summarizedField>Supplier_Booking__c.SB_Selling_Price_Actual__c</summarizedField>
        <summaryForeignKey>Supplier_Booking__c.SB_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Ts_Cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Type_2__c</fullName>
        <inlineHelpText>Type 2 in old world</inlineHelpText>
        <label>Holiday reason</label>
        <picklist>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couple (not on honeymoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family holiday (incl children 18 and over)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family holiday (incl children 18 and under)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sabbatical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stag/Hen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Welcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obtain_required_information__c</fullName>
        <inlineHelpText>Be responsible for obtaining all required information from clients.</inlineHelpText>
        <label>Obtain required information</label>
        <type>DateTime</type>
    </fields>
</CustomObject>